plugins {
    id 'java'
    id 'application'
}

group 'com.uddernetworks.holysheet'
version '1.0.0'

sourceCompatibility = 11
mainClassName = 'com.uddernetworks.holysheet.DocStore'
//mainClassName = 'com.uddernetworks.holysheet.socket.jshell.JShellRemote'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')

    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'org.slf4j:slf4j-log4j12:1.7.25'

    implementation 'org.apache.commons:commons-text:1.7'
    implementation 'commons-collections:commons-collections:3.2.2'
    implementation 'commons-io:commons-io:2.6'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'

    implementation 'info.picocli:picocli:4.1.2'
    annotationProcessor 'info.picocli:picocli-codegen:4.1.2'

    implementation 'com.google.api-client:google-api-client:1.30.1'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.30.1'
    implementation 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
}

test {
    useJUnitPlatform()
}

run{
    standardInput = System.in
    jvmArgs("--add-opens", "jdk.jshell/jdk.jshell=ALL-UNNAMED")
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}
